WeeChat - Wee Enhanced Environment for Chat
===========================================

ChangeLog - 2004-10-03


Version 0.0.8 (under dev!):
   * fixed bug when adding alias with same name as other
   * /buffer command developed (buffers list, move and notify)
   * logging buffers to disk (server/channel/private according to user prefs)
   * Away now announced in channels, and config option "look_display_away" added
     to enable/disable this feature
   * Fixed crash when resizing terminal to very small size
   * "-MORE-" message is now erased when switching to another buffer
   * DCC file receive ok (Alt-D for DCC view)
   * /query command now reopens private buffer if already opened
   * added key for redrawing terminal (Ctrl-L)
   * added key for clearing hotlist (Alt-R)

Version 0.0.7 (2004-08-08):
   * new "col_status_delimiters" config option
   * /buffer command added, buffers ordered by number, auto-jump to active
     buffers (alt-a), jump to buffers by number (alt-number)
   * /window command added, split terminal horizontally/vertically
   * unique color for each nick (based on nickname)
   * action messages are now considered as messages, not crappy joins/parts
   * fixed display bug when nicklist is displayed at bottom of screen
   * added history limit (text buffer & commands)
   * replaced --enable-debug with --with-debug option for ./configure, which is
     now integer: 1 = compiler debug flag, 2 = same 1 with verbose debug messages
     in WeeChat (default: 0 = no debug)

Version 0.0.6 (2004-06-05):
   * improved channel highlight (priority to message vs join/part)
   * fixed bug when opened private win and remote user changes his nick
   * /query command added (starts private conversation)
   * IRC messages 476, 477 added
   * /mode command is now ok and channel flags are displayed in status bar
   * fixed display bug (text was blinking when scrolling)
   * CTCP Version reply is now in english only and doesn't show host (security reason)
